# TrajectoryServoing

./: .gitignore  CMakeLists.txt  README.md  TrajectoryServoing.rosinstall  installation_guide.md  package.xml
SuppMat/: abbreviations.md  real_experiment_setups.md  simulation_setups.md  symbols.md
SuppMat/assets/: EvaluationMetrics.tex  PoseUncertSupMat.tex  ReplenishmentThresh.tex  TSControlGain.tex  ale.tex  ate.tex  controlEffort.tex  npda.tex  pose_error.tex  ref.bib  smooth.tex  te.tex
bash_files/: button_start_robot.sh  reset_odom.sh  reset_robot.sh
benchmark/: pose_trajectory_tracking_benchmark_tsrb_long_plv.py  pose_trajectory_tracking_benchmark_tsrb_short_plv.py  slam_visual_trajectory_tracking_benchmark_tsrb_long_feedforward.py  slam_visual_trajectory_tracking_benchmark_tsrb_short_feedforward.py
configs/feature_tracking_config/: config.yaml
configs/online_traj_configs/: common_costmap_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  move_base_params.yaml
configs/slam_configs/: gazebo_stereo_ADIS16448_fix.yaml  gazebo_stereo_mpu6000_fix.yaml  multisense_camera.yaml  multisense_camera_baseline.yaml
include/tf2_pips_traj_msg/: tf2_pips_traj_msg.h
include/trajectory_servoing/: cubic_spline_interpolator.h  send_online_trajectory.h  trajectory_servo_core.h  trajectory_servo_enum.h  trajectory_servo_feedforward.h  trajectory_servo_navigator.h  trajectory_servo_no_tracking.h  trajectory_servo_no_tracking_navigator.h
launch/: gazebo_GF_slam_multisense_stereo.launch  gazebo_feature_tracking_stereo.launch  gazebo_slam_msf_stereo.launch
launch/controller/: gt_controller.launch  odom_controller.launch  slam_controller.launch  trajectory_servoing_controller.launch
launch/environments/: gazebo_multisense_turtlebot_sector.launch  gazebo_multisense_turtlebot_sector_lifted.launch  gazebo_multisense_turtlebot_tsrb.launch  gazebo_multisense_turtlebot_tsrb_collid.launch
launch/logging/: gazebo_logging.launch
launch/trajectory_generation/: gazebo_offline_planning_gt.launch  gazebo_offline_planning_odom.launch  gazebo_offline_planning_slam.launch  gazebo_online_planning_odom.launch
map/: sector_stereo_world.yaml
offline_trajs/shortBenchTraj/: TS.yaml  straight.yaml  sturnning1.yaml  sturnning2.yaml  turnning1.yaml  turnning2.yaml  twoturnning1.yaml  twoturnning2.yaml
src/: cubic_spline_interpolator.cpp  gt_odom_generator.cpp  send_online_trajectory.cpp  trajectory_servo_core.cpp  trajectory_servo_feedforward.cpp  trajectory_servo_navigator.cpp  trajectory_servo_navigator_node.cpp  trajectory_servo_no_tracking.cpp  trajectory_servo_no_tracking_navigator.cpp  trajectory_servo_no_tracking_navigator_node.cpp
srv/: OnlineTrajService.srv
turtlebot/turtlebot_stereo/: camera.urdf.xacro  kobuki_hexagons_kinect_stereo_camera.urdf.xacro  kobuki_hexagons_stereo_camera_ADIS_16448.urdf.xacro  kobuki_hexagons_stereo_camera_mpu_6000.urdf.xacro  stereo.launch.xml  turtlebot_gazebo.urdf.xacro
world/: sector_world_laser_stixel.world  sector_world_laser_stixel_lifted.world
