<?xml version="1.0"?>
<package>
  <name>trajectory_servoing</name>
  <version>0.0.1</version>
  <description>The trajectory_servoing package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="shiyufeng@gatech.edu">Shiyu Feng</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/baseline_testing</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <author email="shiyufeng@gatech.edu">Shiyu Feng</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>navfn</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>octomap_server</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pips_trajectory_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>turtlebot_trajectory_functions</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sparse_stereo</build_depend>
  <build_depend>sparse_stereo_msgs</build_depend>
  
  <run_depend>navfn</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>turtlebot_trajectory_functions</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>octomap_server</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>pips_trajectory_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>sparse_stereo</run_depend>
  <run_depend>sparse_stereo_msgs</run_depend>
  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
